trying to fix issue with image not loading on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,3 @@
-
-
 body{
     background-color: #494949;
     padding-top: 8vw; 
@@ -22,7 +20,9 @@ h1{
 .navbar{
     padding: 0.8vw;
     font-size: 2vw;
-    opacity: 100%;
+    background-image: url(../images/leaves.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .navbar a{
